--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main class="container">
 
   <figure class="omelette">
-    <img src="assets/images/image-omelette.jpeg" alt="omelette" height=250 width=auto>
+    <img src="assets/images/image-omelette.jpeg" alt="omelette" height=auto width=450>
   </figure>
 
 
@@ -68,9 +68,9 @@
 
   <h2 class="subHeaders">Nutrition</h2>
 
+  <p class="para">The table below shows nutritional values per serving without the additional fillings.</p>
   
-  The table below shows nutritional values per serving without the additional fillings.
-
+  <div class="table-container">
   <table>
     <tr>
       <td>Calories</td>
@@ -89,6 +89,7 @@
       <td>22g</td>
     </tr>
   </table>
+  </div>
   </main>
   
   
