Fixed image styling bugs

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
   <main class="container">
 
-  <figure class="omelette">
+  <div class="omelette">
     <img src="assets/images/image-omelette.jpeg" alt="omelette" height=auto width=450>
-  </figure>
+  </div>
 
 
   <h1 class="mainHeader">Simple Omelette Recipe</h1>
